refactor: controller response/request objects
