# tntconcept-rest/src/main/kotlin/com/autentia/tnt/api/binnacle/vacation/HolidayResponse.kt
@@ -3,14 +3,14 @@ package com.autentia.tnt.api.binnacle.vacation
 import com.autentia.tnt.binnacle.entities.dto.HolidayResponseDTO
 
 data class HolidayResponse(
-    val holidays: List<HolidayRequest>,
-    val vacations: List<VacationRequest>,
+    val holidays: List<HolidayDetailsResponse>,
+    val vacations: List<VacationResponse>,
 ) {
     companion object {
         fun from(holidayResponseDTO: HolidayResponseDTO): HolidayResponse =
             HolidayResponse(
-                holidayResponseDTO.holidays.map { HolidayRequest.from(it) },
-                holidayResponseDTO.vacations.map { VacationRequest.from(it) }
+                holidayResponseDTO.holidays.map { HolidayDetailsResponse.from(it) },
+                holidayResponseDTO.vacations.map { VacationResponse.from(it) }
             )
     }
 }
